# GitMaya

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_en.md  README_zh.md  example.env  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: document.md  enhancement.md  error.md
.github/workflows/: docker-image.yml  pr-checker.tml
deploy/: .env.example  Dockerfile  Dockerfile.proxy  Dockerfile.proxy.saas  default_location  docker-compose.yml  entrypoint.sh  proxy.conf
server/: app.py  celery_app.py  server.py
server/command/: lark.py
server/model/: lark.py  repo.py  schema.py  team.py  user.py
server/routes/: __init__.py  github.py  lark.py  team.py  user.py
server/tasks/: __init__.py  github.py  lark.py
server/tasks/github/: __init__.py  github.py  issue.py  organization.py  pull_request.py  push.py  repo.py
server/tasks/lark/: __init__.py  base.py  chat.py  issue.py  lark.py  manage.py  message.py  pull_request.py  repo.py
server/utils/: auth.py  constant.py  github.py  redis.py  user.py  utils.py
server/utils/github/: account.py  application.py  bot.py  github.py  model.py  organization.py  repo.py  repository.py
server/utils/lark/: __init__.py  base.py  chat_action_choose.py  chat_manual.py  (+22 more)
website/: .editorconfig  .eslintrc.cjs  .lintstagedrc.json  .npmrc  .prettierrc  LICENSE  README.md  commitlint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
website/.github/: dependabot.yml
website/src/: App.tsx  index.css  main.tsx
(+41 files in other folders)
