[project]
name = "GitMaya"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "ConnectAI", email = "hi@connectai-e.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "ca-lark-oauth>=0.0.4",
    "ca-lark-webhook>=0.0.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
