[project]
name = "GitMaya"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "ConnectAI", email = "hi@connectai-e.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "ca-lark-oauth>=0.0.6",
    "ca-lark-webhook>=0.0.5",
    "flask-sqlalchemy>=3.1.1",
    "flask-cors>=4.0.0",
    "pymysql>=1.1.0",
    "click>=8.1.7",
    "bson>=0.5.10",
    "jwt>=1.3.1",
    "urllib3>=2.1.0",
    "ca-lark-sdk>=0.0.23",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "pydantic>=2.5.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
